--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,12 +1,12 @@
 rss_url: "https://example.com/rss"
 news_api_url: "https://newsapi.org/v2/top-headlines?country=us"
-api_key: "news_api_key"
+api_key: "d386ec76f2db423597f4dcdad3ff8328"
 postgres:
-  host: "postgres"
+  host: "localhost"
   port: 5432
   user: "eugene"
-  password: "eugene007"
-  database: "news"
+  password: "Eugene007@"
+  database: "newslett"
 s3:
   access_key: "your_access_key"
   secret_key: "your_secret_key"
